--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -38,7 +38,10 @@ jobs:
     - name: Restart IBM Cloud
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
+        UUID: ${{ secrets.UUID }}
+        WS_PATH: ${{ secrets.WS_PATH }}
       run: |
         ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
+        ./re_install.sh "$IBM_APP_NAME" "$UUID" "$WS_PATH"
         
 
