--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -41,6 +41,7 @@ jobs:
         UUID: ${{ secrets.UUID }}
         WS_PATH: ${{ secrets.WS_PATH }}
       run: |
+        chmod 777 ./re_install.sh
         ./re_install.sh "$IBM_APP_NAME" "$UUID" "$WS_PATH"
         
 
