--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -81,8 +81,7 @@ jobs:
         }
         EOF
         cd ./v2ray-cloudfoundry
-        ../IBM_Cloud_CLI/ibmcloud target --cf
-        ../IBM_Cloud_CLI/ibmcloud cf install
+        echo "开始配置文件"
         ../IBM_Cloud_CLI/ibmcloud cf push
         echo "配置完成。"
         
