--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -43,6 +43,7 @@ jobs:
       run: |
         ls -a
         git submodule update --init --recursive
+        chmod 0755 ./*
         cat >  ./v2ray-cloudfoundry/manifest.yml  << EOF
         applications:
         - path: .
@@ -81,7 +82,7 @@ jobs:
         }
         EOF
         cd ./v2ray-cloudfoundry
-        echo "开始配置文件"
+        echo "开始推送配置文件,远程部署!!"
         ../IBM_Cloud_CLI/ibmcloud cf push
         echo "配置完成。"
         
